fix erroneous cm to m conversion, add ft

--- a/index.htm
+++ b/index.htm
@@ -83,6 +83,7 @@
 				<option value="cm">centimeters</option>
 				<option value="in">inches</option>
 				<option value="m">meters</option>
+				<option value="ft">feet</option>
 			</select>
 			<div id="identify"></div>
 		</div>
